--- a/src/less/librairy/palette.less
+++ b/src/less/librairy/palette.less
@@ -1,6 +1,7 @@
 // Librairy color Palette
 @lib-panels-bg: #F9F9F9; // right and left panels background color
 @lib-panels-titles: #969696; // right and left panels titles color
+@lib-panels-titles-hover: #575757; // right and left panels titles color
 @lib-panels-selected-item-bg: #CCC; // left panel selected item background
 @lib-panels-selected-item: #000; // left panel selected item color
 @lib-panels-dragover-item-bg: #969696; // left panel dragove item background
