improve librairy list contextual menu.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -193,11 +193,13 @@
             }
         }
     }
-    #contextual-menu {
-        position: fixed;
-        top: 300px;
-        left: 50%;
-        z-index: 1000;
+    
+    .menu {
+        list-style: none;
+        padding: 0;
+        position: absolute;
+        top: 45px;
+        right: 10px;
         font-size: medium;
         display: block;
         line-height: normal;
