use css to position thumbs in librairy rather than js.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -150,21 +150,24 @@
             }
         }
     }
+    .pictures-wrapper {
+        padding-right: 10px;
+    }
     .thumb-wrapper {
+        .ratio-1-1; // to get 1:1 ratio
         vertical-align: top;
-        position: relative;
-        text-align: center;
-        //margin: 10px 0 0 10px;
-        padding: 10px 0 0 10px;
         display: inline-block;
-        font-size: 0;
-        //background: yellow;
+        position: relative;
+        .content {
+            padding: 10px 0 0 10px;
+            display: flex
+        }
         article {
             position: relative;
             display: inline-block;
             box-sizing: border-box;
             max-width: 100%;
-            margin: 0;
+            margin: auto;
             line-height: 0em;
             &.selected {
                 border: 4px solid @lib-selected-thumb-border-color;
@@ -294,3 +297,4 @@
         }
     }
 }
+
