display hit counts in contact page.

--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -388,6 +388,22 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 
+// sup heading
+.suptitle {
+    color: @blog-time;
+    font-size: 0.85em;
+    display: flex;
+}
+// time indications
+time {
+    margin-bottom: 0.2em;
+    text-indent: 0.2em;
+}
+// hits indications
+.hits {
+    margin-left: auto;
+}
+
 // main header common
 header[role="banner"] {
     // logo
