displaying post hits in posts detail works.

--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -170,6 +170,7 @@ button.modal-close {
 
 // administration links (edition buttons, etc.)
 .admin-links {
+    margin-bottom: 10px;
     text-align: right;
 }
 
@@ -402,6 +403,7 @@ time {
 // hits indications
 .hits {
     margin-left: auto;
+    margin-right: 10px;
 }
 
 // main header common
