display hits under lightbox pictures.

--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -432,8 +432,10 @@ header[role="banner"] {
             a {
                 vertical-align: top;
                 text-decoration: none;
-                margin-right: 15px;
             }
+        }
+        .hits {
+            padding-left: 15px;
         }
     }
 }
