--- a/src/less/common/lightbox.less
+++ b/src/less/common/lightbox.less
@@ -92,6 +92,12 @@
             }
         }
     }
+    .lb-title {
+        display: flex;
+    }
+    .hits {
+        margin-left: auto;
+    }
     .lbfigure-appear {
         opacity: 0;
     }
