fix css for errors in weblog.

--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -622,11 +622,10 @@ hr {
     width: calc(~'100vw - 200px');
     left: calc(~'-50vw + 50% + 100px');
 }
-.carousel-error {
+.carousel-error, .weblog-error {
     text-align: center;
     font-size: 1.3em;
-    height: 400px;
-    line-height: 400px;
+    margin: 8em auto;
 }
 .info {
     text-align: center;
