add an index component for librairy.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -126,6 +126,7 @@
     }
     #librairy-list {
         padding-bottom: 10px;
+        padding-top: 1px; // for content's margin
         min-height: calc(~'100vh - 80px');
         .basket-right, .basket-left {
             box-sizing: border-box;
