split header css to allow easy customisation.

--- a/src/less/controller.less
+++ b/src/less/controller.less
@@ -39,3 +39,7 @@
 
 // lightbox
 @import './common/lightbox.less';
+
+/* import at last user header file */
+// header
+@import './common/header.less';
