--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -3,7 +3,7 @@
 @import './palette.less';
 
 #librairy {
-    header[role="banner"] {
+    header#librairy-header {
         position: fixed;
         left: 0;
         top: 0;
@@ -13,6 +13,7 @@
         background: @blog-bg;
         z-index: 5;
         padding: 0; 
+        border-bottom: 1px solid @blog-hr;
         #logo {
             margin: 15px 15px 15px 30px;
             line-height: 0px;
