--- a/src/less/weblog/layout.less
+++ b/src/less/weblog/layout.less
@@ -48,6 +48,7 @@
     }
     // author indication
     h6.author {
+        position: relative; // for user-info to place correctly
         font-weight: normal;
         font-style: italic;
         text-align: right;
@@ -57,7 +58,7 @@
         height: 0px;
         border-top: 1px solid @blog-hr;
         padding-right: 8%;
-        a {
+        > a {
             display: inline-block;
             position: relative;
             top: -0.65em;
