--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -379,6 +379,12 @@ button.modal-close {
         background: url("/assets/images/insta-color.png") center center no-repeat;
     }
 }
+.website-link {
+    background: url("/assets/images/link.svg") center center no-repeat;
+    &.color:hover, &.color:focus {
+        background: url("/assets/images/link.png") center center no-repeat;
+    }
+}
 
 // user info panel (displayed on author name hover)
 .user-info-wrapper {
