add a link for etsy, rename blog and website link in user model.

--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -379,7 +379,7 @@ button.modal-close {
         background: url("/assets/images/insta-color.png") center center no-repeat;
     }
 }
-.website-link {
+.website-link, .blog-link, .etsy-link {
     background: url("/assets/images/link.svg") center center no-repeat;
     &.color:hover, &.color:focus {
         background: url("/assets/images/link.png") center center no-repeat;
