--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -379,10 +379,16 @@ button.modal-close {
         background: url("/assets/images/insta-color.png") center center no-repeat;
     }
 }
-.website-link, .blog-link, .etsy-link {
+.website-link, .blog-link {
     background: url("/assets/images/link.svg") center center no-repeat;
     &.color:hover, &.color:focus {
         background: url("/assets/images/link.png") center center no-repeat;
+    }
+}
+.etsy-link {
+    background: url("/assets/images/etsy.svg") center center no-repeat;
+    &.color:hover, &.color:focus {
+        background: url("/assets/images/etsy-color.svg") center center no-repeat;
     }
 }
 
