--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -577,6 +577,7 @@ header[role="banner"] {
 
 // Carousel (automatique, client side rendering)
 .carousel {
+    @carousel_trans: 0.4s;
     margin: 24px 0;
     position: relative;
     overflow: hidden;
@@ -587,11 +588,15 @@ header[role="banner"] {
         display: inline;
         box-sizing: border-box;
         opacity: 0.6;
-        transform: translateX(0);
-        transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
-        -moz-transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
-        -webkit-transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
-        -o-transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
+        -webkit-transform: translateZ(0);
+        -moz-transform: translateZ(0);
+        -ms-transform: translateZ(0);
+        -o-transform: translateZ(0);
+        transform: translateZ(0);
+        transition: left @carousel_trans ease-in-out, opacity @carousel_trans ease-in-out;
+        -moz-transition: left @carousel_trans ease-in-out, opacity @carousel_trans ease-in-out;
+        -webkit-transition: left @carousel_trans ease-in-out, opacity @carousel_trans ease-in-out;
+        -o-transition: left @carousel_trans ease-in-out, opacity @carousel_trans ease-in-out;
         &.selected {
             opacity: 1;
         }
